--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ua">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
 
@@ -14,7 +14,7 @@
   <div class="container">
     <div class="header__inner">
       <nav class="nav">
-        <a href="#" class="links">Main</a>
+        <a href="index.html" class="links">Main</a>
         <div class="nav__dropdown">
           <a class="links">Matches</a>
           <div class="dropdown__content">
@@ -25,7 +25,7 @@
           </div>
         </div>
         <a href="#" class="links">News</a>
-        <a href="#" class="links">Fans</a>
+        <a href="pages/fans.html" class="links">Fans</a>
         <a href="#" class="links">Contacts</a>
         <a href="#" class="links">Admin</a>
       </nav>
@@ -38,7 +38,7 @@
   </div>
 </header>
 
-<main class="main">
+<main>
   <div class="container">
     <div class="main__image">
       <p class="image__text">Volleyball Ukraine</p>
@@ -72,8 +72,6 @@
       <p class="footer__copyright">© 2021 WebUI Club. All right reserved.</p>
       <nav class="footer__nav">
         <a href="#" class="links">Policy</a>
-        <a href="#" class="links">Terms of Service</a>
-        <a href="#" class="links">Legal</a>
       </nav>
     </div>
   </div>
