--- a/pages/fans.html
+++ b/pages/fans.html
@@ -2,9 +2,89 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>$Title$</title>
+
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/fans.css">
+  <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+
+  <title>Fans</title>
 </head>
 <body>
-$END$
+<header>
+  <div class="container">
+    <div class="header__inner">
+      <nav class="nav">
+        <a href="../index.html" class="links">Main</a>
+        <div class="nav__dropdown">
+          <a class="links">Matches</a>
+          <div class="dropdown__content">
+            <a href="#" class="links">Calendar of matches</a>
+            <div class="underline"></div>
+            <a href="#" class="links">Next game</a>
+            <a href="#" class="links">Raiting</a>
+          </div>
+        </div>
+        <a href="#" class="links">News</a>
+        <a href="fans.html" class="links">Fans</a>
+        <a href="#" class="links">Contacts</a>
+        <a href="#" class="links">Admin</a>
+      </nav>
+      <div>
+        <a href="../index.html">
+          <img src="../img/logo.png" alt="logo" class="header__logo">
+        </a>
+      </div>
+    </div>
+  </div>
+</header>
+
+<main class="main">
+  <h1>Fans request</h1>
+  <div class="main__block">
+    <div class="main__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto beatae cumque
+      cupiditate dicta dolore dolorum ea earum, eius fuga fugit illo illum in, ipsam libero nihil non odit optio,
+      placeat possimus quae quas quasi quibusdam quidem quod ratione sed tenetur totam ullam velit voluptatibus.
+      Architecto dignissimos  Ad exercitationem ipsa omnis? Animi architecto consequuntur dolor, dolores, esse impedit
+      labore minus non odio omnis quaerat qui quo quos reprehenderit sed? Eligendi, harum?
+      <div class="main__detail">
+        <div class="main__date">19.08.2021, 14:43</div>
+        <div class="main__author">Valleyball Fan2021</div>
+      </div>
+    </div>
+  </div>
+
+  <div class="main__block">
+    <div class="main__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto beatae cumque
+      cupiditate dicta dolore dolorum ea earum, eius fuga fugit illo illum in, ipsam libero nihil non odit optio,
+      placeat possimus quae quas quasi quibusdam quidem quod ratione sed tenetur totam ullam velit voluptatibus.
+      Architecto dignissimos  Ad exercitationem ipsa omnis? Animi architecto consequuntur dolor, dolores, esse impedit
+      labore minus non odio omnis quaerat qui quo quos reprehenderit sed? Eligendi, harum?
+      <div class="main__detail">
+        <div class="main__date">19.08.2021, 14:43</div>
+        <div class="main__author">Valleyball Fan2021</div>
+      </div>
+    </div>
+  </div>
+  
+  <div class="main__block">
+    <form action="" class="main__form">
+      <textarea id="request" name="request" placeholder="Write request here.." class="main__textarea"></textarea>
+
+      <input type="submit" value="Submit" class="button__submit">
+    </form>
+  </div>
+</main>
+
+<footer class="footer">
+  <div class="container">
+    <div class="footer__inner">
+      <p class="footer__copyright">© 2021 WebUI Club. All right reserved.</p>
+      <nav class="footer__nav">
+        <a href="#" class="links">Policy</a>
+      </nav>
+    </div>
+  </div>
+</footer>
 </body>
 </html>
