--- a/pages/fans.html
+++ b/pages/fans.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/fans.css">
@@ -14,7 +15,10 @@
 <header>
   <div class="container">
     <div class="header__inner">
-      <nav class="nav">
+      <button class="burger" onclick="toggleBurger()">
+        <span class="burger__item">Menu</span>
+      </button>
+      <nav class="nav" id="nav">
         <a href="../index.html" class="links">Main</a>
         <div class="nav__dropdown">
           <a class="links">Matches</a>
@@ -86,5 +90,12 @@
     </div>
   </div>
 </footer>
+
+<script>
+  let toggleBurger = () => {
+    document.getElementById('nav').classList.toggle('visible');
+    document.querySelector('.burger').classList.toggle('active')
+  }
+</script>
 </body>
 </html>
