smallfix, contacts page

--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" href="../css/style.css">
-  <link rel="stylesheet" href="../css/fans.css">
+  <link rel="stylesheet" href="../css/contacts.css">
   <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 
@@ -44,39 +44,25 @@
 </header>
 
 <main class="main">
-  <h1>Fans request</h1>
-  <div class="main__block">
-    <div class="main__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto beatae cumque
-      cupiditate dicta dolore dolorum ea earum, eius fuga fugit illo illum in, ipsam libero nihil non odit optio,
-      placeat possimus quae quas quasi quibusdam quidem quod ratione sed tenetur totam ullam velit voluptatibus.
-      Architecto dignissimos  Ad exercitationem ipsa omnis? Animi architecto consequuntur dolor, dolores, esse impedit
-      labore minus non odio omnis quaerat qui quo quos reprehenderit sed? Eligendi, harum?
-      <div class="main__detail">
-        <div class="main__date">19.08.2021, 14:43</div>
-        <div class="main__author">Valleyball Fan2021</div>
-      </div>
+  <div class="container">
+    <h1 class="main__heading">Contacts</h1>
+    <div class="main__inner">
+    <address class="main__contacts">
+      <ul>
+        <img class="contacts__image" src="../img/contacts/phone.png" alt="Phones">
+        <li>Mark Telephone: 380123456789</li>
+        <li>Steven Telephone: 380123456123</li>
+        <li>Andriana Telephone: 380123453249</li>
+        <img class="contacts__image" src="../img/contacts/email.png" alt="Email">
+        <li>Email: example@gmail.com</li>
+        <img class="contacts__image" src="../img/contacts/map.png" alt="Adress">
+        <li>Adress: вулиця Набережна Перемоги, 9Б, Дніпро</li>
+      </ul>
+    </address>
+    <div class="main__map">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d677491.861027701!2d34.51903226562499!3d48.44784529999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40dbfd537c87ec59%3A0x8d67bb5f6bbceab4!2sBeach%20volleyball!5e0!3m2!1sru!2sua!4v1629522331182!5m2!1sru!2sua" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
   </div>
-
-  <div class="main__block">
-    <div class="main__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto beatae cumque
-      cupiditate dicta dolore dolorum ea earum, eius fuga fugit illo illum in, ipsam libero nihil non odit optio,
-      placeat possimus quae quas quasi quibusdam quidem quod ratione sed tenetur totam ullam velit voluptatibus.
-      Architecto dignissimos  Ad exercitationem ipsa omnis? Animi architecto consequuntur dolor, dolores, esse impedit
-      labore minus non odio omnis quaerat qui quo quos reprehenderit sed? Eligendi, harum?
-      <div class="main__detail">
-        <div class="main__date">19.08.2021, 14:43</div>
-        <div class="main__author">Valleyball Fan2021</div>
-      </div>
-    </div>
-  </div>
-  
-  <div class="main__block">
-    <form action="" class="main__form">
-      <textarea id="request" name="request" placeholder="Write request here.." class="main__textarea"></textarea>
-
-      <input type="submit" value="Submit" class="button__submit">
-    </form>
   </div>
 </main>
 
