--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <a href="#" class="links">News</a>
         <a href="pages/fans.html" class="links">Fans</a>
-        <a href="#" class="links">Contacts</a>
+        <a href="pages/contacts.html" class="links">Contacts</a>
         <a href="#" class="links">Admin</a>
       </nav>
       <div>
