somefix, created contacts page

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a href="#" class="links">Raiting</a>
           </div>
         </div>
-        <a href="#" class="links">News</a>
+        <a href="pages/news.html" class="links">News</a>
         <a href="pages/fans.html" class="links">Fans</a>
         <a href="pages/contacts.html" class="links">Contacts</a>
         <a href="#" class="links">Admin</a>
