--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -29,7 +29,7 @@
             <a href="#" class="links">Raiting</a>
           </div>
         </div>
-        <a href="#" class="links">News</a>
+        <a href="news.html" class="links">News</a>
         <a href="fans.html" class="links">Fans</a>
         <a href="contacts.html" class="links">Contacts</a>
         <a href="#" class="links">Admin</a>
@@ -45,7 +45,7 @@
 
 <main class="main">
   <div class="container">
-    <h1 class="main__heading">Contacts</h1>
+    <h1 class="main__title">Contacts</h1>
     <div class="main__inner">
     <address class="main__contacts">
       <ul>
