--- a/pages/fans.html
+++ b/pages/fans.html
@@ -29,7 +29,7 @@
             <a href="#" class="links">Raiting</a>
           </div>
         </div>
-        <a href="#" class="links">News</a>
+        <a href="news.html" class="links">News</a>
         <a href="fans.html" class="links">Fans</a>
         <a href="contacts.html" class="links">Contacts</a>
         <a href="#" class="links">Admin</a>
@@ -44,7 +44,8 @@
 </header>
 
 <main class="main">
-  <h1>Fans request</h1>
+  <div class="container">
+  <h1 class="main__title">Fans request</h1>
   <div class="main__block">
     <div class="main__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto beatae cumque
       cupiditate dicta dolore dolorum ea earum, eius fuga fugit illo illum in, ipsam libero nihil non odit optio,
@@ -77,6 +78,7 @@
 
       <input type="submit" value="Submit" class="button__submit">
     </form>
+  </div>
   </div>
 </main>
 
