highlighting of active page on nav

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <span class="burger__item">Menu</span>
       </button>
       <nav class="nav" id="nav">
-        <a href="index.html" class="links">Main</a>
+        <a href="index.html" class="links active-link">Main</a>
         <div class="nav__dropdown">
           <a class="links">Matches</a>
           <div class="dropdown__content">
