--- a/pages/fans.html
+++ b/pages/fans.html
@@ -30,7 +30,7 @@
           </div>
         </div>
         <a href="news.html" class="links">News</a>
-        <a href="fans.html" class="links">Fans</a>
+        <a href="fans.html" class="links active-link">Fans</a>
         <a href="contacts.html" class="links">Contacts</a>
         <a href="#" class="links">Admin</a>
       </nav>
