--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -31,7 +31,7 @@
         </div>
         <a href="news.html" class="links">News</a>
         <a href="fans.html" class="links">Fans</a>
-        <a href="contacts.html" class="links">Contacts</a>
+        <a href="contacts.html" class="links active-link">Contacts</a>
         <a href="#" class="links">Admin</a>
       </nav>
       <div>
