--- a/pages/news.html
+++ b/pages/news.html
@@ -29,7 +29,7 @@
             <a href="#" class="links">Raiting</a>
           </div>
         </div>
-        <a href="news.html" class="links">News</a>
+        <a href="news.html" class="links active-link">News</a>
         <a href="fans.html" class="links">Fans</a>
         <a href="contacts.html" class="links">Contacts</a>
         <a href="#" class="links">Admin</a>
