--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <a href="pages/news.html" class="links">News</a>
         <a href="pages/fans.html" class="links">Fans</a>
         <a href="pages/contacts.html" class="links">Contacts</a>
-        <a href="#" class="links">Admin</a>
+        <a href="pages/admin.html" class="links">Admin</a>
       </nav>
       <div>
         <a href="index.html">
