--- a/pages/news.html
+++ b/pages/news.html
@@ -32,7 +32,7 @@
         <a href="news.html" class="links active-link">News</a>
         <a href="fans.html" class="links">Fans</a>
         <a href="contacts.html" class="links">Contacts</a>
-        <a href="#" class="links">Admin</a>
+        <a href="admin.html" class="links">Admin</a>
       </nav>
       <div>
         <a href="../index.html">
