created matches page

--- a/pages/fans.html
+++ b/pages/fans.html
@@ -23,7 +23,7 @@
         <div class="nav__dropdown">
           <a class="links">Matches</a>
           <div class="dropdown__content">
-            <a href="#" class="links">Calendar of matches</a>
+            <a href="matches.html" class="links">Calendar of matches</a>
             <div class="underline"></div>
             <a href="#" class="links">Next game</a>
             <a href="#" class="links">Raiting</a>
